--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,7 @@ ITensorQTT = "574676e4-6e8a-454e-8957-4bd907a7d854"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
+[compat]
+Revise = "3.7.2"
